# seo-autopilot

./: .env.dusk.local  .env.example  .gitignore  README.md  TODO.md  composer.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/workflows/: dusk.yml  tests.yml
agents/: package-lock.json  package.json
agents-python/: pyproject.toml
agents-python/src/agents/: __init__.py
agents-python/src/agents/competitor/: __init__.py  main.py
agents-python/src/agents/fact_checker/: __init__.py  main.py
agents-python/src/agents/internal_linking/: __init__.py  main.py
agents-python/src/agents/research/: __init__.py  main.py
agents-python/src/agents/shared/: config.py  crawler.py  embeddings.py  events.py  llm.py  output.py
agents-python/src/agents/site_indexer/: __init__.py  database.py  main.py
agents-python/tests/: test_config.py  test_crawler.py  test_embeddings.py  test_events.py  test_llm.py  test_output.py  test_research_agent.py  test_site_indexer.py
agents/competitor-agent/: index.js  serp-analyzer.js
agents/fact-checker-agent/: claim-extractor.js  index.js  verifier.js
agents/internal-linking-agent/: index-loader.js  index.js  link-suggester.js  site-scanner.js
agents/research-agent/: content-scraper.js  google-search.js  index.js
agents/shared/: browser.js  config.js  event-emitter.js  llm.js
agents/site-indexer/: content-extractor.js  db.js  embedder.js  index.js  navigator.js
app/Events/: AgentActivityEvent.php  SiteCrawlProgress.php
app/Jobs/: AutopilotDiscoveryJob.php  AutopilotGenerationJob.php  AutopilotPublishJob.php  ClusterKeywordsJob.php  DeliverWebhookJob.php  DetectRefreshCandidatesJob.php  DiscoverKeywordsJob.php  GenerateAiPromptSetJob.php  GenerateArticleJob.php  GenerateContentPlanJob.php  GenerateHostedSiteExportJob.php  (+5 more)
bootstrap/: app.php  providers.php
config/: business.php  reverb.php  services.php
public/: site.webmanifest
routes/: api.php  channels.php  console.php  web.php
tests/: DuskTestCase.php
(+512 files in other folders)
