[project]
name = "seo-autopilot-agents"
version = "1.0.0"
requires-python = ">=3.11"
description = "Python agents for SEO Autopilot"

dependencies = [
    "crawl4ai>=0.4.0",
    "httpx>=0.27",
    "openai>=1.0",
    "voyageai>=0.3",
    "redis>=5.0",
    "click>=8.0",
    "python-dotenv>=1.0",
    "sqlite-vec>=0.1",
]

[project.scripts]
research = "agents.research.main:main"
competitor = "agents.competitor.main:main"
fact-checker = "agents.fact_checker.main:main"
internal-linking = "agents.internal_linking.main:main"
site-indexer = "agents.site_indexer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]
