[project]
name = "seo-autopilot-agents"
version = "1.0.0"
requires-python = ">=3.11"
description = "Python agents for SEO Autopilot"

dependencies = [
    "crawl4ai>=0.8.6",
    "httpx>=0.27",
    "openai>=2.30.0",
    "voyageai>=0.3.7",
    "redis>=7.4.0",
    "click>=8.0",
    "python-dotenv>=1.2.2",
    "sqlite-vec>=0.1.7",
]

[project.scripts]
research = "agents.research.main:main"
competitor = "agents.competitor.main:main"
fact-checker = "agents.fact_checker.main:main"
internal-linking = "agents.internal_linking.main:main"
site-indexer = "agents.site_indexer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]
